<resources>
    <string name="app_name">Мій КТГГ</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Головна</string>
    <string name="title_news">Новини</string>
    <string name="title_timetable">Розклад</string>
    <string name="title_settings">Налаштування</string>
    <string name="title_account_settings">Профіль</string>
    <string name="facebook_app_id">1352022775004486</string>
    <string name="fb_login_protocol_scheme">fb1352022775004486</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="exit_text">Вийти</string>
</resources>