<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ua.pp.trushkovsky.MyKTGG.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_timetable"
        android:name="ua.pp.trushkovsky.MyKTGG.ui.timetable.TimetableFragment"
        android:label="@string/title_timetable"
        tools:layout="@layout/fragment_timetable" />
    <fragment
        android:id="@+id/navigation_news"
        android:name="ua.pp.trushkovsky.MyKTGG.ui.news.d.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="ua.pp.trushkovsky.MyKTGG.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_account_settings2"
            app:destination="@id/navigation_account_settings"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:launchSingleTop="false"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right" />
    </fragment>
    <fragment
        android:id="@+id/navigation_account_settings"
        android:name="ua.pp.trushkovsky.MyKTGG.ui.settings.AccountSettingsFragment"
        android:label="@string/title_account_settings"
        tools:layout="@layout/fragment_account_settings" />
</navigation>